# gr-iqbal

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
grc/: iqbalance_fix_cc.block.yml  iqbalance_optimize_c.block.yml
include/iqbalance/: CMakeLists.txt  fix_cc.h  optimize_c.h
lib/: fix_cc.cc  optimize_c.cc
python/: CMakeLists.txt  __init__.py
python/bindings/: CMakeLists.txt  failed_conversions.txt  fix_cc_python.cc  optimize_c_python.cc  python_bindings.cc
python/bindings/docstrings/: fix_cc_pydoc_template.h  optimize_c_pydoc_template.h
